GNOME Bugzilla – Bug 690266
Freeze with F10/Shift-F10 on submenus
Last modified: 2012-12-17 15:09:43 UTC
If I press F10 or Shift-F10 on a submenu, the application freezes endlessly. Downstream report: "gnome-panel: Crash after shift-F10" http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=680643 This is especially bad because the user needs accessibility support and thus he thinks his whole desktop is frozen (only gnome-panel is). This is a fallout from sealing gtkmenushell. I'll attach a patch that also needs to be backported to all gtk stable branches.
Created attachment 231624 [details] [review] gtkmenushell: Fix an endless loop on focus cycle This is a simple fallout from sealing gtkmenushell, which only appears when F10 or Shift-F10 is used in a submenu.
Review of attachment 231624 [details] [review]: Looks correct.
Attachment 231624 [details] pushed as 531d0dc - gtkmenushell: Fix an endless loop on focus cycle
Pushed to all stable gtk-3-x branches too.